Added error messages for update product and household redirecting them

--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,10 @@ dependencies {
     // For Java 11:
     implementation 'org.glassfish.jaxb:jaxb-runtime'
     implementation(files(genJaxb.classesDir).builtBy(genJaxb))
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'junit:junit:4.13.1'
 
     jaxb "com.sun.xml.bind:jaxb-xjc:2.1.7"
 // end::dependency[]
